# Windingcraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  run.sh
.github/workflows/: build.yml
dependencies/glad/include/glad/: gl.h
shaders/: color-fragment.glsl  color-vertex.glsl  fragment-shader.glsl  shader.frag  shader.vert  vertex-shader.glsl
src/: main.cpp
src/core/: CallbackData.h  Camera.h  Config.cpp  Config.h  Engine.cpp  Engine.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Shader.h  Time.cpp  Time.h  Window.cpp  Window.h
src/game/: BlockType.h  GameConfig.h  Inventory.cpp  Inventory.h  PlayerCommand.h  Resource.h  SaveData.cpp  SaveData.h
src/graphics/: HUD.cpp  HUD.h  Mesh.cpp  Mesh.h  PlayerRenderer.cpp  PlayerRenderer.h  PrimitiveMeshes.cpp  PrimitiveMeshes.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  WorldRenderer.cpp  WorldRenderer.h
src/models/: Cube.cpp  Cube.h
src/net/: ByteBuffer.h  ClientSession.cpp  ClientSession.h  NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  NetworkTypes.h  PacketSerializer.cpp  PacketSerializer.h
src/physics/: AABB.h
src/scene/: Camera.cpp  Camera.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  PlayerStatus.h  Transform.h  World.cpp  World.h
src/server/: GameServer.cpp  GameServer.h  HostedServer.cpp  HostedServer.h
src/ui/: HUD.cpp  HUD.h  Hotbar.cpp  Hotbar.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  UIHelpers.h  UIManager.cpp  UIManager.h  VideoSettings.cpp  VideoSettings.h
src/world/: Chunk.cpp  Chunk.h  ChunkKey.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkSerializer.cpp  ChunkSerializer.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
